--- a/public/partials/site.html
+++ b/public/partials/site.html
@@ -6,11 +6,11 @@
   <div class="container">
 
     <!-- 1ª ETAPA -->
-    <div class="row">
+    <div class="row dadosEndereco" ng-hide="etapa1">
 
       <div class="col-md-6 col-md-offset-3" style="background: white; margin-top: 5%;border-radius: 10px;">
 
-        <form ng-submit="enviaEndereco(this)" name="dadosEndereco">
+        <form ng-submit="enviaEndereco(this)">
 
           <div class="selecione-bairro" style="margin-bottom: 10px; border-bottom: 1px solid #ccc;">
             <h3 class="text-center">Descubra seu bairro com delivery</h3>
@@ -76,7 +76,7 @@
                 </div>
               </div>
 
-              <input type="submit" value="PROXIMO!" class="btn btn-block btn-primary" ng-disabled="dadosEndereco.$invalid">
+              <input type="submit" value="PROXIMO!" class="btn btn-block btn-primary">
 
             </div>
           </div>
@@ -88,11 +88,11 @@
 
 
       <!-- 2ª ETAPA -->
-      <div class="row">
+      <div class="row dadosCliente">
 
         <div class="col-md-6 col-md-offset-3" style="background: white; margin-top: 5%;border-radius: 10px;">
 
-          <form ng-submit="enviaDados(this)" name="dadosCliente">
+          <form ng-submit="enviaDados(this)">
 
             <div class="dados" style="margin-bottom: 10px;">
               <h3 class="text-center">Digite seus dados</h3>
@@ -110,16 +110,18 @@
                   <div class="row">
 
                     <div class="col-md-6">
-                      <input type="text" id="telefone" name="telefone" class="form-control" placeholder="Telefone" ng-model="telefone" required>
+                      <label for="telefone">Ex:11-25855522</label>
+                      <input type="text" id="telefone" name="telefone" class="form-control" placeholder="Telefone" ng-model="telefone" required pattern="^[1-9]{2}\-[2-9][0-9]{7,8}$">
                     </div>
 
                     <div class="col-md-6">
-                      <input type="text" id="celular" name="celular" class="form-control" placeholder="Celular" ng-model="celular" required>
+                      <label for="celular">Ex:11-958995522</label>
+                      <input type="text" id="celular" name="celular" class="form-control" placeholder="Celular" ng-model="celular" required pattern="^[1-9]{2}\-[2-9][0-9]{7,8}$">
                     </div>
                   </div>
                 </div>
 
-                <input type="submit" value="AGORA VAMOS FAZER O PEDIDO!" class="btn btn-block btn-primary" ng-disabled="dadosCliente.$invalid">
+                <input type="submit" value="AGORA VAMOS FAZER O PEDIDO!" class="btn btn-block btn-primary">
 
               </div>
             </div>
@@ -134,7 +136,7 @@
     <!-- FIM CONTAINER -->
 
     <!-- 3ª ETAPA PEDIDO -->
-    <div class="row" style="padding-left: 2%;padding-right: 0.8%;">
+    <div class="row dadosPedido" style="padding-left: 2%;padding-right: 0.8%;">
       <div class="col-md-8 col-xs-12 col-sm-8 col-lg-8" style="background: white; border-radius: 10px; margin-top: 5%;">
 
         <div class="col-md-12" style="background: white; border-radius: 10px;">
@@ -181,7 +183,7 @@
                     <h4 class="modal-title" id="exampleModalLabel">Pizza - </b>{{pizza.nome}}</h4></h4>
                   </div>
                   <div class="modal-body">
-                    <form name="form" ng-submit="adicionaPedido(this, 'pizza')">
+                    <form ng-submit="adicionaPedido(this, 'pizza')">
 
                       <div class="row">
                         <div class="col-md-6">
@@ -194,7 +196,7 @@
                         <div class="col-md-6">
                           <div class="form-group">
                             <label for="recipient-name" class="control-label">Adicione a borda:</label>
-                            <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)">
+                            <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)" required>
                             <option value="">-- Selecione a borda --</option>
                              </select>
                              <input type="text" ng-model="valorBorda" style="display: none;">
@@ -208,7 +210,7 @@
                       </div>
 
                       <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary btn-block" ng-show="borda">PRONTO!</button>
+                        <button type="submit" class="btn btn-primary btn-block">PRONTO!</button>
                       </div>
 
                     </form>
@@ -241,7 +243,7 @@
                         <div class="col-md-6">
                           <div class="form-group">
                             <label>2ª Opção</label>
-                            <select name="pizzas" id="pizzas" class="form-control" ng-model="meia.pizza">
+                            <select name="pizzas" id="pizzas" class="form-control" ng-model="meia.pizza" required>
                             <option value="">-- Selecione a 2ª opção --</option>
                             <option value="{{pizza}}" ng-repeat="pizza in pizzas">{{pizza.nome}} - R${{pizza.valorGrande}}</option>
                             </select>
@@ -258,7 +260,7 @@
                         <div class="col-md-6">
                           <div class="form-group">
                             <label for="recipient-name" class="control-label">Adicione a borda:</label>
-                            <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)">
+                            <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)" required>
                             <option value="">-- Selecione a borda --</option>
                              </select>
                              <input type="text" ng-model="valorBorda" style="display: none;">
@@ -272,7 +274,7 @@
                       </div>
 
                       <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary btn-block" ng-show="borda">PRONTO!</button>
+                        <button type="submit" class="btn btn-primary btn-block">PRONTO!</button>
                       </div>
 
                     </form>
@@ -290,15 +292,17 @@
                 <thead>
                  <tr>
                    <th>Sabores</th>
-                   <th>Grande</th>
                    <th>Broto</th>
+                   <th>Meia</th>
+                   <th>Grande</th>
                  </tr>
                 </thead>
                 <tbody class="conteudo-pizzasDoces">
                   <tr ng-repeat="pizzaDoce in pizzasDoces">
                     <td>{{pizzaDoce.nome}} <br /><small>{{pizzaDoce.descricao}}</small></td>
-                    <td>{{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaPizza(pizzaDoce)"></span></td>
                     <td>{{pizzaDoce.valorBroto}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaBroto(pizzaDoce)"></span></td>
+                    <td>{{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaPizza(pizzaDoce)"></span></td>
+                    <td>{{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}meia" ng-click="enviaPizza(pizzaDoce)"></span></td>
                   </tr>
               </tbody>
 
@@ -324,7 +328,7 @@
                       <div class="col-md-6">
                         <div class="form-group">
                           <label for="recipient-name" class="control-label">Adicionar borda:</label>
-                          <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)">
+                          <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)" required>
                           <option value="">-- Selecione a borda --</option>
                            </select>
                            <input type="text" ng-model="valorBorda" style="display: none;">
@@ -344,6 +348,72 @@
                 </div>
               </div>
             </div>
+
+
+            <!-- MODAL MEIA-->
+            <div ng-repeat="pizzaDoce in pizzasDoces" class="modal fade" id="{{pizzaDoce._id}}meia" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel">Selecione suas opções de pizzas</h4>
+                  </div>
+                  <div class="modal-body">
+                    <form name="form" ng-submit="adicionaPedido(this, 'pizza', 'meia')">
+
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label>1ª Opção</label>
+                            <input type="text" value="{{pizzaDoce.nome}}" ng-model="pizzaDoce.nome" disabled class="form-control">
+                          </div>
+                        </div>
+
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label>2ª Opção</label>
+                            <select name="pizzasDoces" id="pizzasDoces" class="form-control" ng-model="meia.pizza" required>
+                            <option value="">-- Selecione a 2ª opção --</option>
+                            <option value="{{pizzaDoce}}" ng-repeat="pizzaDoce in pizzasDoces">{{pizzaDoce.nome}} - R${{pizzaDoce.valorGrande}}</option>
+                            </select>
+                          </div>
+                        </div>
+
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label for="Quantidade" class="control-label">Quantas pizzas?</label>
+                            <input type="number" class="form-control" value="1" ng-model="qtd">
+                          </div>
+                        </div>
+
+                        <div class="col-md-6">
+                          <div class="form-group">
+                            <label for="recipient-name" class="control-label">Adicione a borda:</label>
+                            <select name="borda" id="borda" class="form-control" ng-model="borda" ng-options="borda as borda.nome for borda in bordas" ng-change="selectBorda(borda.valor)" required>
+                            <option value="">-- Selecione a borda --</option>
+                             </select>
+                             <input type="text" ng-model="valorBorda" style="display: none;">
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <label for="message-text" class="control-label">Observações:</label>
+                        <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
+                      </div>
+
+                      <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary btn-block">PRONTO!</button>
+                      </div>
+
+                    </form>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+
             </div>
 
 
@@ -573,12 +643,12 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="exampleModalLabel">Qual tipo de pagamento na entrega?</h4></h4>
+                <h4 class="modal-title" id="exampleModalLabel">Tipo de pagamento na entrega</h4></h4>
               </div>
               <div class="modal-body">
                 <form name="form" ng-submit="enviarPedido(this)">
                   <div class="form-group">
-                    <select name="formaPagamento" id="formaPagamento" class="form-control" ng-model="formaPagamento" ng-options="pagamento as pagamento.nome for pagamento in pagamentos track by pagamento.nome">
+                    <select name="formaPagamento" id="formaPagamento" class="form-control" ng-model="formaPagamento" ng-options="pagamento as pagamento.nome for pagamento in pagamentos track by pagamento.nome" required>
                     <option value="">-- Selecione o tipo --</option>
                     </select>
                   </div>
