--- a/public/partials/pedidos.html
+++ b/public/partials/pedidos.html
@@ -77,7 +77,7 @@
                               <button class="modal-action modal-close waves-effect waves-green btn-flat white-text">OK</button>
                           </div>
                       </div>
-                      <a href="#enviarParaCozinha" class="waves-effect waves-light btn full-width"><i class="fa fa-cutlery"></i> Enviar para cozinha</a>
+                      <a href="#enviarParaCozinha" class="waves-effect waves-light btn full-width modal-trigger"><i class="fa fa-cutlery"></i> Enviar para cozinha</a>
                       <a href="#deletarPedido" class="waves-effect waves-light btn full-width red modal-trigger"><i class="fa fa-times-circle"></i> Cancelar pedido</a>
 
                       <!-- Modal enviar -->
@@ -182,7 +182,7 @@
                               <button class="modal-action modal-close waves-effect waves-green btn-flat white-text">OK</button>
                           </div>
                       </div>
-                      <a href="#enviarParaEntrega" class="waves-effect waves-light btn full-width" ng-click=""><i class="fa fa-paper-plane"></i> Enviar para entrega</a>
+                      <a href="#enviarParaEntrega" class="waves-effect waves-light btn full-width modal-trigger"><i class="fa fa-paper-plane"></i> Enviar para entrega</a>
                       <a href="#deletarPedidoCozinha" class="waves-effect waves-light btn full-width red modal-trigger"><i class="fa fa-times-circle"></i> cancelar pedido</a>
 
                       <!-- Modal enviar -->
@@ -291,7 +291,7 @@
                               <button class="modal-action modal-close waves-effect waves-green btn-flat white-text">OK</button>
                           </div>
                       </div>
-                      <a href="#finalizarPedido" class="waves-effect waves-light btn full-width"><i class="fa fa-check"></i> Finalizar pedido</a>
+                      <a href="#finalizarPedido" class="waves-effect waves-light btn full-width modal-trigger"><i class="fa fa-check"></i> Finalizar pedido</a>
                       <a href="#deletarPedidoEntrega" class="waves-effect waves-light btn full-width red modal-trigger"><i class="fa fa-times-circle"></i> cancelar pedido</a>
 
                       <!-- Modal enviar -->
