--- a/public/partials/site.html
+++ b/public/partials/site.html
@@ -145,30 +145,36 @@
             <li role="presentation" class="active"><a href="#pizzas" aria-controls="home" role="tab" data-toggle="tab">Pizzas</a></li>
             <li role="presentation"><a href="#pizzasDoces" aria-controls="home" role="tab" data-toggle="tab">Pizzas doces</a></li>
             <li role="presentation"><a href="#esfihas" aria-controls="esfihas" role="tab" data-toggle="tab">Esfihas</a></li>
-            <li role="presentation"><a href="#sucos" aria-controls="sucos" role="tab" data-toggle="tab">Sucos</a></li>
+            <li role="presentation"><a href="#esfihasDoces" aria-controls="esfihasDoces" role="tab" data-toggle="tab">Esfihas doces</a></li>
+            <li role="presentation"><a href="#beirutes" aria-controls="sucos" role="tab" data-toggle="tab">Beirutes</a></li>
             <li role="presentation"><a href="#bebidas" aria-controls="bebidas" role="tab" data-toggle="tab">Bebidas</a></li>
           </ul>
 
           <!-- Tab panes -->
-          <div class="tab-content" style="margin-top: 5%;">
+          <div class="tab-content" style="margin-top: 5%; height: 500px; overflow-y: scroll; overflow-x: hidden;">
 
             <!-- PAINEL DE PIZZAS -->
             <div role="tabpanel" class="tab-pane active" id="pizzas">
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Filtrar Pizza" ng-model="buscarPizza"><br />
+              </div>
+
               <table class="table">
                 <thead>
                  <tr>
                    <th>Sabores</th>
-                   <th>Broto</th>
-                   <th>Meia</th>
-                   <th>Grande</th>
+                   <th></th>
+                   <th></th>
+                   <th></th>
                  </tr>
                 </thead>
                 <tbody class="conteudo-pizzas">
-                  <tr ng-repeat="pizza in pizzas">
+                  <tr ng-repeat="pizza in pizzas | filter: buscarPizza">
                     <td>{{pizza.nome}} <br /><small>{{pizza.descricao}}</small></td>
-                    <td>{{pizza.valorBroto}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizza._id}}" ng-click="enviaBroto(pizza)"></span></td>
-                    <td>{{pizza.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizza._id}}meia" ng-click="enviaPizza(pizza)"></span></td>
-                    <td>{{pizza.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizza._id}}" ng-click="enviaPizza(pizza)"></span></td>
+                    <td><b>Broto</b><br />R${{pizza.valorBroto}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizza._id}}" ng-click="enviaBroto(pizza)"></span></td>
+                    <td><b>Meia</b><br />R${{pizza.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizza._id}}meia" ng-click="enviaPizza(pizza)"></span></td>
+                    <td><b>Grande</b><br />R${{pizza.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizza._id}}" ng-click="enviaPizza(pizza)"></span></td>
                   </tr>
               </tbody>
 
@@ -242,11 +248,17 @@
 
                         <div class="col-md-6">
                           <div class="form-group">
-                            <label>2ª Opção</label>
-                            <select name="pizzas" id="pizzas" class="form-control" ng-model="meia.pizza" required>
-                            <option value="">-- Selecione a 2ª opção --</option>
-                            <option value="{{pizza}}" ng-repeat="pizza in pizzas">{{pizza.nome}} - R${{pizza.valorGrande}}</option>
-                            </select>
+                            <label>2ª Opção</label> <br />
+                              <select name="pizzas" id="pizzas" class="form-control" ng-model="meia.pizza" required>
+                                <option value="" disabled>-- Selecione a 2ª opção --</option>
+
+                                <option value="" disabled style="font-weight: bold; font-size: 18px; text-align: center;">******** PIZZAS DOCES ********</option>
+                                <option value="{{pizza}}" ng-repeat="pizza in pizzasDoces">{{pizza.nome}} - R${{pizza.valorGrande}}</option>
+
+                                <option value="" disabled style="font-weight: bold; font-size: 18px; text-align: center;">******** PIZZAS TRADICIONAIS ********</option>
+                                <option value="{{pizza}}" ng-repeat="pizza in pizzas">{{pizza.nome}} - R${{pizza.valorGrande}}</option>
+
+                              </select>
                           </div>
                         </div>
 
@@ -288,21 +300,26 @@
             </div>
             <!-- PAINEL DE PIZZAS DOCES -->
             <div role="tabpanel" class="tab-pane" id="pizzasDoces">
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Filtrar Pizza" ng-model="buscarPizzaDoce"><br />
+              </div>
+
               <table class="table">
                 <thead>
                  <tr>
                    <th>Sabores</th>
-                   <th>Broto</th>
-                   <th>Meia</th>
-                   <th>Grande</th>
+                   <th></th>
+                   <th></th>
+                   <th></th>
                  </tr>
                 </thead>
                 <tbody class="conteudo-pizzasDoces">
-                  <tr ng-repeat="pizzaDoce in pizzasDoces">
+                  <tr ng-repeat="pizzaDoce in pizzasDoces | filter: buscarPizzaDoce">
                     <td>{{pizzaDoce.nome}} <br /><small>{{pizzaDoce.descricao}}</small></td>
-                    <td>{{pizzaDoce.valorBroto}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaBroto(pizzaDoce)"></span></td>
-                    <td>{{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}meia" ng-click="enviaPizza(pizzaDoce)"></span></td>
-                    <td>{{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaPizza(pizzaDoce)"></span></td>
+                    <td><b>Broto</b><br />R${{pizzaDoce.valorBroto}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaBroto(pizzaDoce)"></span></td>
+                    <td><b>Meia</b><br />R${{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}meia" ng-click="enviaPizza(pizzaDoce)"></span></td>
+                    <td><b>Grande</b><br />R${{pizzaDoce.valorGrande}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{pizzaDoce._id}}" ng-click="enviaPizza(pizzaDoce)"></span></td>
                   </tr>
               </tbody>
 
@@ -373,7 +390,12 @@
                           <div class="form-group">
                             <label>2ª Opção</label>
                             <select name="pizzasDoces" id="pizzasDoces" class="form-control" ng-model="meia.pizza" required>
-                            <option value="">-- Selecione a 2ª opção --</option>
+                            <option value="" disabled>-- Selecione a 2ª opção --</option>
+
+                            <option value="" disabled style="font-weight: bold; font-size: 18px; text-align: center;">******** PIZZAS TRADICIONAIS ********</option>
+                            <option value="{{pizza}}" ng-repeat="pizza in pizzas">{{pizza.nome}} - R${{pizza.valorGrande}}</option>
+
+                            <option value="" disabled style="font-weight: bold; font-size: 18px; text-align: center;">******** PIZZAS DOCES ********</option>
                             <option value="{{pizzaDoce}}" ng-repeat="pizzaDoce in pizzasDoces">{{pizzaDoce.nome}} - R${{pizzaDoce.valorGrande}}</option>
                             </select>
                           </div>
@@ -417,9 +439,13 @@
             </div>
 
 
-
             <!-- PAINEL DE ESFIHAS -->
             <div role="tabpanel" class="tab-pane" id="esfihas">
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Filtrar Esfihas" ng-model="buscarEsfiha"><br />
+              </div>
+
               <table class="table">
                 <thead>
                  <tr>
@@ -429,7 +455,7 @@
                 </thead>
 
                 <tbody class="conteudo-esfihas">
-                  <tr ng-repeat="esfiha in esfihas">
+                  <tr ng-repeat="esfiha in esfihas | filter: buscarEsfiha">
                     <td>{{esfiha.nome}} <br /><small>{{esfiha.descricao}}</small></td>
                     <td>{{esfiha.valor}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{esfiha._id}}" ng-click="enviaEsfiha(esfiha)"></span></td>
                   </tr>
@@ -469,8 +495,70 @@
               </div>
             </div>
 
-            <!-- PAINEL DE SUCOS -->
-            <div role="tabpanel" class="tab-pane" id="sucos">
+
+            <!-- PAINEL DE ESFIHAS DOCES -->
+            <div role="tabpanel" class="tab-pane" id="esfihasDoces">
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Filtrar Esfihas" ng-model="buscarEsfihaDoce"><br />
+              </div>
+
+              <table class="table">
+                <thead>
+                 <tr>
+                   <th>Sabores</th>
+                   <th>Valor</th>
+                 </tr>
+                </thead>
+
+                <tbody class="conteudo-esfihas">
+                  <tr ng-repeat="esfiha in esfihasDoces | filter: buscarEsfihaDoce">
+                    <td>{{esfiha.nome}} <br /><small>{{esfiha.descricao}}</small></td>
+                    <td>{{esfiha.valor}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{esfiha._id}}" ng-click="enviaEsfiha(esfiha)"></span></td>
+                  </tr>
+                </tbody>
+              </table>
+
+              <!-- MODAL -->
+              <div ng-repeat="esfiha in esfihasDoces" class="modal fade" id="{{esfiha._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="exampleModalLabel">Esfiha - </b>{{esfiha.nome}}</h4></h4>
+                    </div>
+                    <div class="modal-body">
+                      <form name="form" ng-submit="adicionaPedido(this, 'esfiha')">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label for="Quantidade" class="control-label">Quantas esfihas?</label>
+                            <input type="number" class="form-control" value="1" ng-model="qtd">
+                          </div>
+                        </div>
+
+                        <div class="form-group">
+                          <label for="message-text" class="control-label">Observações do pedido(ex:sem cebola, sem tomate):</label>
+                          <textarea class="form-control" id="message-text" ng-model="observacoes"></textarea>
+                        </div>
+
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary btn-block">PRONTO!</button>
+                        </div>
+                      </form>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- PAINEL DE BEIRUTES -->
+            <div role="tabpanel" class="tab-pane" id="beirutes">
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Filtrar Beirutes" ng-model="buscarBeirutes"><br />
+              </div>
+
               <table class="table">
                 <thead>
                  <tr>
@@ -480,25 +568,25 @@
                 </thead>
 
                 <tbody class="conteudo-sucos">
-                  <tr ng-repeat="suco in sucos">
-                    <td>{{suco.nome}} <br /><small>{{suco.descricao}}</small></td>
-                    <td>{{suco.valor}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{suco._id}}" ng-click="enviaSuco(suco)"></span></td>
+                  <tr ng-repeat="beirute in beirutes | filter: buscarBeirutes">
+                    <td>{{beirute.nome}} <br /><small>{{beirute.descricao}}</small></td>
+                    <td>{{beirute.valor}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{beirute._id}}" ng-click="enviaBeirute(beirute)"></span></td>
                   </tr>
                 </tbody>
               </table>
 
               <!-- MODAL -->
-              <div ng-repeat="suco in sucos" class="modal fade" id="{{suco._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+              <div ng-repeat="beirute in beirutes" class="modal fade" id="{{beirute._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <h4 class="modal-title" id="exampleModalLabel">Suco - </b>{{suco.nome}}</h4></h4>
+                      <h4 class="modal-title" id="exampleModalLabel">Beirute - </b>{{beirute.nome}}</h4></h4>
                     </div>
                     <div class="modal-body">
                       <form name="form" ng-submit="adicionaPedido(this, 'esfiha')">
                         <div class="form-group">
-                          <label for="Quantidade" class="control-label">Quantos sucos?</label>
+                          <label for="Quantidade" class="control-label">Quantos beirutes?</label>
                           <input type="number" class="form-control" value="1" ng-model="qtd">
                         </div>
 
@@ -520,6 +608,11 @@
 
             <!-- PAINEL DE BEBIDAS -->
             <div role="tabpanel" class="tab-pane" id="bebidas">
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Filtrar Bebidas" ng-model="buscarBebidas"><br />
+              </div>
+
               <table class="table">
                 <thead>
                  <tr>
@@ -529,7 +622,7 @@
                 </thead>
 
                 <tbody class="conteudo-bebidas">
-                  <tr ng-repeat="bebida in bebidas">
+                  <tr ng-repeat="bebida in bebidas | filter: buscarBebidas">
                     <td>{{bebida.nome}} <br /><small>{{bebida.descricao}}</small></td>
                     <td>{{bebida.valor}} <span class="fa fa-plus-circle fa-2x" style="color: green;cursor: pointer;" data-toggle="modal" data-target="#{{bebida._id}}" ng-click="enviaBebida(bebida)"></span></td>
                   </tr>
@@ -707,47 +800,6 @@
   })
 
   </script>
-
-    <!-- <form ng-submit="enviarPedido(this)">
-      <fieldset>
-        <legend><h1 class="text-center area">Cadastrando pedido pelo site</h1></legend>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Nome" ng-model="nome">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Telefone" ng-model="telefone">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Celular" ng-model="celular">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Endereço" ng-model="endereco">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Bairro" ng-model="bairro">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Cep" ng-model="cep">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Ponto de ref." ng-model="referencia">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Valor" ng-model="valor">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Pedido" ng-model="pedido">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Observações" ng-model="observacoes">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Forma de pagamento" ng-model="formaPg">
-        </div>
-
-        <button type="submit" class="btn btn-primary btn-block">Enviar pedido para o sistema!</button>
-      </fieldset>
-    </form> -->
   </div>
 </div>
 
